--- a/scss/_scroll-up.scss
+++ b/scss/_scroll-up.scss
@@ -8,4 +8,16 @@
   right: 30px;
   bottom: 30px;
   z-index: 1000;
-}
+  align-items: center;
+
+  .scroll-up__item {
+    display: block;
+    width: 25px;
+    height: 35px;
+    margin: 0 auto;
+    background-image: url(../img/icons/up-arrow.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+} // scroll-up
