--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,8 @@
+.section-main__title {
+  display: none;
+}
+
 .header {
-  display: block;
   position: fixed;
   left: -320px;
   top: 0;
@@ -8,93 +11,67 @@
   height: 100vh;
   padding: 60px 75px;
   background-color: #fff;
+  overflow: scroll;
   transition: .5s;
 
-  .nav-close {
-    width: 30px;
-    height: 30px;
-    background-color: $btn-color;
+
+  .header__close {
     position: absolute;
     top: 0;
-    right: 5px;
+    right: 0;
     z-index: 1101;
   }
 
-  .header-logo {
+  .header__logo {
     margin-bottom: 100px;
 
-    .header-logo__link {
-      .header-logo__img {
+    .header__logo-link {
+      .header__logo-img {
         height: auto;
         max-width: 100%;
       }
     }
   } // header-logo
 
-  .main-nav {
-    .main-nav__list {
-      list-style: none;
-      padding: 0;
-      margin: 0;
+  .nav__link--header {
+    position: relative;
 
-      .main-nav__item {
-        padding: 15px 0;
+    &::before {
+      content: "";
+      display: block;
+      width: 30px;
+      height: 3px;
+      background-color: $btn-color;
+      position: absolute;
+      top: 50%;
+      left: -150px;
+      z-index: 1101;
+      margin-top: -1.5px;
+      transition: .3s;
+    }
 
-        .main-nav__link {
-          color: $nav-text-color;
-          font-size: 14px;
-          text-transform: uppercase;
-          text-decoration: none;
-          position: relative;
+    &:hover {
+      &::before {
+        transform: translate(75px, 0);
+      }
+    } // hover
+  } // nav__link--header
 
-          &::before {
-            content: "";
-            display: block;
-            width: 30px;
-            height: 3px;
-            background-color: $btn-color;
-            position: absolute;
-            top: 50%;
-            left: -150px;
-            z-index: 1101;
-            margin-top: -1.5px;
-            transition: .3s;
-          }
 
-          &:hover {
-            color: $btn-color;
-
-            &::before {
-              transform: translate(75px, 0);
-            } // hover
-          } // hover
-
-        } // main-nav__link
-
-        .active {
-          &::before {
-            transform: translate(75px, 0);
-          }
-        } // active
-      } // main-nav__item
-    } // main-nav__list
-
-  } // main-nav
-
-  .nav-buttons {
+  .header__buttons {
     margin: 30px 0 100px;
 
-    .btn_nav {
+    .header__buttons-item {
       width: 160px;
       height: 55px;
       margin-bottom: 15px;
     }
   } // nav-buttons
 
-  .client-block {
+  .header__client {
     margin-bottom: 100px;
 
-    .client-block__link {
+    .header__client-link {
       display: block;
       font-size: 18px;
       font-weight: 400;
@@ -104,11 +81,11 @@
       padding: 10px 0;
       transition: .3s;
 
-      .client-block__img {
+      .header__client-img {
         margin-right: 10px;
       }
 
-      .item-counter {
+      .header__client-counter {
         font-size: 16px;
         color: $black-transparent;
       }
@@ -119,61 +96,66 @@
     } // client-block__item
   } // client-block
 
-  .social-block {
+  .header__social {
     display: flex;
     justify-content: space-between;
 
-    .social-block__item {
+    .header__social-item {
       display: block;
-      width: 15px;
-      height: 15px;
-      border-radius: 50%;
-      background-color: grey;
+      width: 30px;
+      height: 30px;
+      border-radius: 5px;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: contain;
+      cursor: pointer;
+      transition: .3s;
+    }
 
-      .social-block__logo {
-        font-size: 14px;
-        color: $black-transparent;
-      }
+    .pinterest {
+      background-image: url(../img/icons/pinterest.svg);
 
       &:hover {
-        background-color: $btn-color;
+        background-image: url(../img/icons/pinterest-orange.svg);
       }
+    }
 
-    } // social-block__item
+    .instagram {
+      background-image: url(../img/icons/instagram.svg);
+
+      &:hover {
+        background-image: url(../img/icons/instagram-orange.svg);
+      }
+    }
+
+    .facebook {
+      background-image: url(../img/icons/facebook.svg);
+
+      &:hover {
+        background-image: url(../img/icons/facebook-orange.svg);
+      }
+    }
+
+    .twitter {
+      background-image: url(../img/icons/twitter.svg);
+
+      &:hover {
+        background-image: url(../img/icons/twitter-orange.svg);
+      }
+    }
   } // social-block
 } // header
 
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .header {
-    position: relative;
+    position: absolute;
     left: 0;
-    width: 280px;
-    max-width: 280px;
-    padding: 50px;
+    height: auto;
+    overflow: auto;
 
-    .nav-close {
+    .header__close {
       display: none;
     }
-
-    .main-nav {
-      .main-nav__list {
-        .main-nav__item {
-          .main-nav__link {
-            &:hover {
-              &::before {
-                transform: translate(100px, 0);
-              } // hover
-            } // hover
-          } // main-nav__link
-
-          .active {
-            &::before {
-              transform: translate(100px, 0);
-            }
-          } // active
-        } // main-nav__item
-      } // main-nav__list
-    } // main-nav
   } // header
-} // width 768px
+} // width 992px
