--- a/scss/_mobile-nav.scss
+++ b/scss/_mobile-nav.scss
@@ -11,25 +11,25 @@
   padding: 10px 30px;
   box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.3);
 
-  .nav-logo {
-    .nav-logo__link {
+  .mobile-nav__logo {
+    .mobile-nav__logo-link {
       display: block;
       width: 20%;
 
-      .nav-logo__img {
+      .mobile-nav__logo-img {
         max-width: 70px;
         height: auto;
       }
     }
-  } // nav-logo
+  } // mobile-nav__logo
 
-  .nav-toggler {
+  .mobile-nav__toggler {
     width: 30px;
     height: 20px;
     position: relative;
     cursor: pointer;
 
-    .nav-toggler__item {
+    .mobile-nav__toggler-item {
       font-size: 0;
       color: transparent;
       display: block;
@@ -58,12 +58,12 @@
       &::after {
         bottom: 0;
       }
-    } // nav-toggler__item
-  } // nav-toggler
+    } // mobile-nav__toggler-item
+  } // mobile-nav__toggler
 } // mobile-nav
 
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .mobile-nav {
     display: none;
   }
