--- a/scss/_newsteller.scss
+++ b/scss/_newsteller.scss
@@ -1,29 +1,31 @@
 .newsteller {
+  background-color: #3c3c3c;
 
-  .newsteller-info {
-    margin-bottom: 60px;
+  .newsteller-inner {
 
-    .newsteller-info__header {
-      font-size: 30px;
-      font-weight: 600;
-      color: #fff;
+    .newsteller-inner__info {
+      margin-bottom: 60px;
 
-      .newsteller-info__header_orange {
-        color: $btn-color;
+      .newsteller-inner__info-title {
+        font-size: 30px;
+        font-weight: 600;
+        color: #fff;
+
+        .newsteller-inner__info-header--orange {
+          color: $btn-color;
+        }
       }
-    }
 
-    .newsteller-info__text {
-      color: rgba(255,255,255,.5);
-      line-height: 1.7;
-    }
-  } // newsteller-info
+      .newsteller-inner__info-text {
+        color: rgba(255,255,255,.5);
+        line-height: 1.7;
+      }
+    } // newsteller-inner__info
 
-  .newsteller-form {
-    .form-block {
+    .newsteller-inner__form {
       position: relative;
 
-      .form-block__input {
+      .newsteller-inner__form-input {
         width: 100%;
         height: 50px;
         font-size: 14px;
@@ -34,32 +36,57 @@
         border: none;
       }
 
-      .form-block__btn {
+      .newsteller-inner__form-btn {
         height: 50px;
         padding: 0 30px;
+        font-size: 0;
         position: absolute;
         right: 0;
         top: 0;
         z-index: 1;
+
+        &::after {
+          content: "";
+          display: block;
+          width: 30px;
+          height: 30px;
+          background-image: url(../img/icons/email.svg);
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: contain;
+        }
       }
-    } //form-block
-  } // newsteller-form
+
+      @media (min-width: 992px) {
+        .newsteller-inner__form-btn {
+          font-size: 14px;
+
+          &::after {
+            display: none;
+          }
+        }
+      }
+    } // newsteller-inner__form
+  } // newsteller-inner
 } // newsteller
 
 
-@media (min-width: 992px) {
+
+@media (min-width: 1200px) {
   .newsteller {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    .newsteller-inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
 
-    .newsteller-info {
-      width: 55%;
-      margin-bottom: 0;
-    }
+      .newsteller-inner__info {
+        width: 55%;
+        margin-bottom: 0;
+      }
 
-    .newsteller-form {
-      width: 40%;
+      .newsteller-inner__form {
+        width: 40%;
+      }
     }
   } // newsteller
 } //width 992px
